infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
spec:
  rules:
    - host: edirect.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 80
          - path: /api/users/?(.*)
            backend:
              serviceName: projects-srv
              servicePort: 80
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
